--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,9 @@ bind-key f send-prefix
 #set-window-option -g window-status-current-bg red
 
 #Enable Mouse
+setw -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 #set -g mode-mouse on
 #set -g mouse-select-pane on
 #set -g mouse-resize-pane on
